Enable release from main

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -1,6 +1,6 @@
 variables:
   ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/main') }}:
-    release: false
+    release: true
   ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/feature/') }}:
     release: false
   ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/bugfix/') }}:
