Add support for .net 6.0

--- a/src/UmbracoCms.V9.RootDictionaryItem/UmbracoCms.V9.RootDictionaryItem.csproj
+++ b/src/UmbracoCms.V9.RootDictionaryItem/UmbracoCms.V9.RootDictionaryItem.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<PackageId>Enterspeed.Contrib.Source.UmbracoCms.V9.RootDictionaryItem</PackageId>
 
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFrameworks>net5.0;net6.0</TargetFrameworks>
 		<PackageVersion>0.0.0</PackageVersion>
 		<Authors>Elgars Logins</Authors>
 
